1. Add MY_KEYCODE_CTRL_LEFT/MY_KEYCODE_CTRL_RIGHT to replace Keyevent.KEYCODE_CTRL_LEFT/RIGHT for backward compatible to android 2.x 2. Add ctrl-shift to switch keyboard and ctrl-space to switch chi/eng 3. Fixed minor bugs on Onkeydown and onkeyup 4. Fixed minor bugs on CandidateView showing 5. binray updated!!

--- a/branches/jeremy/res/values/strings.xml
+++ b/branches/jeremy/res/values/strings.xml
@@ -311,7 +311,7 @@
     <string name="l3_initial_restore_end">Restore Finished!</string>
     <string name="l3_initial_restore_confirm">Would you like to restore database from backup?</string>
     
-    <string name="l3_im_setting_select_keyboard">Please choice keyboard display</string>
+    <string name="l3_im_setting_select_keyboard">Please choose keyboard display</string>
     <string name="l3_im_setting_back">Back To Previous Page</string>
     <string name="l3_im_setting_title">Mapping Setting</string>
     <string name="l3_im_setting_source">Source: </string>
