--- a/trunk/LIME/res/values-zh-rTW/strings.xml
+++ b/trunk/LIME/res/values-zh-rTW/strings.xml
@@ -323,5 +323,10 @@
     <string name="l3_im_setting_button_reset">移除字根檔</string>
     <string name="l3_im_setting_button_select">選擇鍵盤對應</string>
     
+    <string name="l3_im_download_from_ov">下載並安裝  OpenVanilla 大易字根</string>
+    <string name="l3_im_download_from_ov_start">開始下載 OpenVanilla 大易字根</string>
+    <string name="l3_im_download_from_ov_install">開始安裝 OpenVanilla 大易字根</string>
+    
+    <string name="l3_tab_bluetooth">藍牙設定</string>
     
 </resources>
