--- a/branches/limehd/res/values-zh-rTW/strings.xml
+++ b/branches/limehd/res/values-zh-rTW/strings.xml
@@ -7,6 +7,7 @@
     <string name="ime_name">LIMEHD</string>
     <string name="ime_setting">LIMEHD 設定</string>
     <string name="input_method">系統輸入法切換</string>
+    <string name="experienced_device">開發測試裝置</string>
 
     <!-- Symbols that are commonly considered word separators in this language -->
     <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
