--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -3,13 +3,13 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Title for Latin keyboard  -->
-    <string name="app_name">LIMEHD</string>
-    <string name="ime_name">LIMEHD</string>
-    <string name="ime_setting">LIMEHD 设定</string>
+    <string name="app_name">LIME-HD</string>
+    <string name="ime_name">LIME-HD</string>
+    <string name="ime_setting">LIME-HD 设定</string>
     <string name="input_method">系统输入法切换</string>
     <string name="experienced_device">开发测试装置</string>
     <string name="license">版权声明</string>
-    <string name="license_detail">LIME 是一个输入法框架程式，旨在提供 Android 装置中文输入法程式。\n组织或个人由网路自行下载之输入法字根及字典档案若有版权上的争议，请自行向原作者取得授权，本程式不负担其所产生的任何法律及版权上的责任。\n完整资讯请参考 LIME Project 网站上的版权说明  http://code.google.com/p/limeime/。</string>
+    <string name="license_detail">LIME-HD 是一个输入法框架程式，旨在提供 Android 装置中文输入法程式。\n组织或个人由网路自行下载之输入法字根及字典档案若有版权上的争议，请自行向原作者取得授权，本程式不负担其所产生的任何法律及版权上的责任。\n完整资讯请参考 LIME Project 网站上的版权说明  http://code.google.com/p/limeime/。</string>
 
 
     <!-- Symbols that are commonly considered word separators in this language -->
