--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -98,6 +98,8 @@
     <string name="candidate_suggestion_summary">依输入文字自动建立关联字</string>
     <string name="learning_switch">启动选取排序</string>
     <string name="learning_switch_summary">依选取次数排序文字清单</string>
+    <string name="physical_keyboard_sort">启动实体键盘选取排</string>
+    <string name="physical_keyboard_sort_summary">使用实体键盘时依选取次数排序文字清单</string>
     <string name="accept_number_index">启动数字对应</string>
     <string name="accept_number_index_summary">允许使用数字为输入法字根</string>
     <string name="accept_symbol_index">启动符号对应</string>
