--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -68,6 +68,8 @@
     <string name="im">输入法</string>
     <string name="enable_english_dictionary">启用英文字典</string>
     <string name="enable_english_dictionary_summary">当使用 英文 输入模式时，显示英文建议字</string>
+    <string name="number_row_in_english">数字列英文键盘</string>
+    <string name="number_row_in_english_summary">在英文键盘显示数字列(5列键盘)</string>
     <string name="enable_english_dictionary_physical_keyboard">实体键盘启用英文字典</string>
     <string name="enable_english_dictionary_physical_keyboard_summary">实体键盘使用英文输入模式时，显示英文建议字</string>
     <string name="im_reverse_lookup_list">输入法字根反查</string>
