--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -58,6 +58,7 @@
     <string name="three_rows_remapping_summary">对应 1234567890-;至 qwertyuiopv.</string>
     
     <string name="physical_keyboard">实验键盘选项</string>
+    <string name="phyonetic_keyboard">注音键盘选项</string>
     
     <string name="prediction_category">英文关联字设定</string>
     <string name="auto_cap">首字自动大写</string> 
@@ -274,6 +275,13 @@
 		<item>一般键盘</item>
 		<item>Milestone/Milestone 2</item>
 		<item>Desire Z</item>
+		<item>Milestone 3</item>
+	</string-array>
+	
+	<string-array name="phonetic_keyboard_type">
+		<item>标准</item>
+		<item>倚天 (41键)</item>
+		<item>倚天26键</item>
 	</string-array>
 	
 	<!-- Table Selection list -->
