--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="number_row_in_english_summary">Show number row in English keyboards (5 rows keyboard).</string>
     
     <string name="physical_keyboard">Physical keyboard selection</string>
+    <string name="phonetic_keyboard">Phonetic keyboard selection</string>
     
     <string name="three_rows_remapping">3 Rows Keybaord Remapping</string>
     <string name="three_rows_remapping_summary">Mapping 1234567890-; to qwertyuiopv.</string>
@@ -202,13 +203,26 @@
 		<item>Normal keyboard</item>
 		<item>Milestone/Milestone 2</item>
 		<item>Desire Z</item>
+		<item>Milestone 3</item>
 	</string-array>
 	<string-array name="physical_keyboard_options_values">
-		<item>normal_keyboard</item>
+		<item>Standard_keyboard</item>
 		<item>milestone</item>
 		<item>desireZ</item>
+		<item>milestone3</item>
 	</string-array>
 	
+	<!-- Phonetic keyboard options List -->
+	<string-array name="phonetic_keyboard_type">
+		<item>Standard</item>
+		<item>ETEN (41keys)</item>
+		<item>ETEN 26keys</item>
+	</string-array>
+	<string-array name="phonetic_keyboard_type_values">
+		<item>standard</item>
+		<item>eten</item>
+		<item>eten26</item>
+	</string-array>
 	
 	
 	
