--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -280,7 +280,7 @@
 	
 	<string-array name="phonetic_keyboard_type">
 		<item>标准</item>
-		<item>倚天 (41键)</item>
+		<item>倚天41键</item>
 		<item>倚天26键</item>
 	</string-array>
 	
