--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -215,7 +215,7 @@
 	<!-- Phonetic keyboard options List -->
 	<string-array name="phonetic_keyboard_type">
 		<item>Standard</item>
-		<item>ETEN (41keys)</item>
+		<item>ETEN 41keys</item>
 		<item>ETEN 26keys</item>
 	</string-array>
 	<string-array name="phonetic_keyboard_type_values">
