--- a/branches/limehd/res/values-zh-rTW/strings.xml
+++ b/branches/limehd/res/values-zh-rTW/strings.xml
@@ -196,14 +196,15 @@
 	<!-- Physical keyboard options List -->
 	<string-array name="physical_keyboard_options">
 		<item>一般鍵盤</item>
-		<item>Milestone/Milestone 2</item>
 		<item>Desire Z</item>
+		<item>Milestone</item>
+		<item>Milestone 2</item>
 		<item>Milestone 3</item>
 	</string-array>
 	
 	<string-array name="phonetic_keyboard_type">
 		<item>標準</item>
-		<item>倚天 (41鍵)</item>
+		<item>倚天41鍵</item>
 		<item>倚天26鍵</item>
 	</string-array>
 	
