--- a/branches/limehd/res/values/strings.xml
+++ b/branches/limehd/res/values/strings.xml
@@ -201,14 +201,16 @@
 	<!-- Physical keyboard options List -->
 	<string-array name="physical_keyboard_options">
 		<item>Normal keyboard</item>
-		<item>Milestone/Milestone 2</item>
 		<item>Desire Z</item>
+		<item>Milestone</item>
+		<item>Milestone 2</item>
 		<item>Milestone 3</item>
 	</string-array>
 	<string-array name="physical_keyboard_options_values">
 		<item>normal_keyboard</item>
-		<item>milestone</item>
 		<item>desireZ</item>
+		<item>milestone</item>
+		<item>milestone2</item>
 		<item>milestone3</item>
 	</string-array>
 	
