1. bug fixed on eten26 remapping. 2. Add Hsu phonetic keyboard option.

--- a/branches/limehd/res/values-zh-rCN/strings.xml
+++ b/branches/limehd/res/values-zh-rCN/strings.xml
@@ -283,6 +283,7 @@
 		<item>标准</item>
 		<item>倚天41键</item>
 		<item>倚天26键</item>
+		<item>许氏</item>
 	</string-array>
 	
 	<!-- Table Selection list -->
