--- a/branches/limehd/res/values-zh-rTW/strings.xml
+++ b/branches/limehd/res/values-zh-rTW/strings.xml
@@ -206,6 +206,7 @@
 		<item>標準</item>
 		<item>倚天41鍵</item>
 		<item>倚天26鍵</item>
+		<item>許氏</item>
 	</string-array>
 	
     <!-- IM Reverse Lookup List -->  
